--- a/resorce/css/style.css
+++ b/resorce/css/style.css
@@ -96,7 +96,6 @@ Fixing Order => Base + Typography >> General Layout + Grid >> Page Layout + Comp
 *::before,
 *::after {
   box-sizing: border-box; }
-
 html {
   font-family: sans-serif;
   line-height: 1.15;
@@ -14699,4 +14698,12 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
     [data-theme-version="dark"] .footer .copyright p {
       color: #fff; }
 
+
+
+
+
+/* .yh a{
+  background-color: blue !important;
+  color:red !important;
+} */
 /*# sourceMappingURL=style.css.map */
